# HandyTranslator

./: .gitignore  Cargo.toml  README.md
src/: apphandler.rs  appsettings.rs  bing_auth_client.rs  clipboard.rs  ffi.rs  helpers.rs  main.rs  stsclient.rs  translator.rs  window.rs
src/ffi/: backgroundapp.rs  helpers.rs  mod.rs  window.rs
