[package]
name = "handy_translator"
version = "0.1.0"
authors = ["VikKol"]

[dependencies]
winapi = "0.2.5"
user32-sys = "0.1.2"
kernel32-sys = "0.2.1"
libc = "0.2.2"
clipboard-win = "*"
lazy_static = "*"
serde_json = "*"

[dependencies.keystroke]
git = "https://github.com/retep998/keystroke-rs.git"

[dependencies.url]
git = "https://github.com/servo/rust-url"
default-features = false
features = []

[dependencies.hyper]
default-features = false
features = ["ssl"]

[dependencies.kiss-ui]
git = "https://github.com/cybergeek94/kiss-ui"